# sumd

./: .gitignore  .redeployignore  CHANGELOG.md  README.md  SPEC.md  SUMD.md  SUMR.md  TODO.md  TODO.txt  app.doql.less  deps.json  goal.yaml  index.html  koru.yaml  local.dev.txt  print_errors.py  project.sh  pyproject.toml  regix.yaml  tree.txt  wup.yaml
.cursor/: mcp.json
.koru/: event-store.jsonl  runtime-context.json
.koru/events/: observability.jsonl
.koru/tillm/prompts/: prompt-20260705-233211-2974354a6574.md  prompt-20260705-234201-29fdb701d556.md  prompt-20260706-001555-2bd71ec65447.md  prompt-20260706-002038-2c1918b9ac53.md  prompt-20260706-012113-2f677d9abf33.md  prompt-20260706-013510-302a4dc4e0f3.md  prompt-20260706-014241-30933ebe1d88.md  prompt-20260706-015538-31485e059389.md  prompt-20260706-021401-32490cc213c4.md  prompt-20260706-023224-3349de12ddb2.md  prompt-20260706-025047-344abdfc0c8c.md  prompt-20260706-030920-354ddef3a5e7.md  prompt-20260706-032755-3651617cb419.md  prompt-20260706-034622-37534587eac5.md  prompt-20260706-040440-3852c1f0ac92.md  prompt-20260706-042305-395405289a4c.md  prompt-20260706-044131-3a55b51ea781.md  prompt-20260706-045950-3b5582911f0b.md  prompt-20260706-051819-3c57cac0a42a.md  prompt-20260706-053636-3d57032934dc.md  prompt-20260706-055504-3e592449afd9.md  prompt-20260706-061332-3f5b07482ff9.md  prompt-20260706-062856-403223d88fe6.md  prompt-20260706-063427-407f5ae7921b.md  prompt-20260706-064151-40e693c9afdc.md  prompt-20260706-065315-4185e5d5dbe4.md  prompt-20260706-071135-4285ed02c10f.md  prompt-20260706-100925-4c897dd60d.md  prompt-20260706-101918-d6ac4dcae9.md  prompt-20260706-102646-13ef13e190f.md  prompt-20260706-103819-1e03f6bf904.md  prompt-20260706-105647-2e25d0ebab9.md  prompt-20260706-111525-3e6a50157b4.md  prompt-20260706-113355-4e8f7935bd3.md  prompt-20260706-120129-66a28f6bf75.md  prompt-20260706-122000-76cc6ac5378.md  prompt-20260706-123828-86eb7f9ca4a.md  prompt-20260706-125649-96f09e840eb.md  prompt-20260706-131518-a716df1717c.md  prompt-20260706-133351-b74823f908a.md  (+102 more)
.nlp2dsl/: environment.doql.less
.nlp2dsl/registry/: environment.doql.less
.planfile/: config.yaml
.planfile/sprints/: current.yaml  current.yaml.fast.json
docs/: README.md  USAGE.md
examples/basic/sample-project/: local.dev.txt
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.logicml  logic.pl  map.toon.yaml  mermaid.export  project.toon.yaml  prompt.txt  validation.toon.yaml
sumd/: __init__.py  __main__.py  cli.py  cli_analyze.py  cli_doql.py  cli_lint.py  cli_scaffold.py  cli_scan.py  extractor.py  mcp_server.py  parser.py  pipeline.py  prolog_engine.py  rules.pl  toon_parser.py  validator.py
sumd/cqrs/: commands.py  events.py  queries.py
sumd/dsl/: ast_nodes.py  commands.py  context_mixin.py  engine.py  lexer.py  parser.py  parser_base.py  parser_expr.py  parser_primary.py  schema.py  schema_commands.py  shell.py
sumd/sections/: api_stubs.py  architecture.py  call_graph.py  quality.py  swop.py  test_contracts.py
sumd/utils/: __init__.py  prolog_core.py
sumd_logic_validator/: README.md  local.dev.txt  pyproject.toml  requirements.txt
sumd_logic_validator/sumd_logic_validator/: __init__.py  cli.py  engine.py
sumd_logic_validator/sumd_logic_validator/logic/: __init__.py  rules.pl
sumd_logic_validator/tests/: test_engine.py
testql-scenarios/: sumd-cli.testql.toon.yaml
tests/: test_architectural_logic.py  test_cli.py  test_cli_helpers.py  test_mcp_server.py
