[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sumd"
version = "0.3.52"
description = "SUMD - Structured Unified Markdown Descriptor for AI-aware project documentation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Tom Sapletta", email = "tom@sapletta.com"}
]
keywords = ["sumd", "markdown", "documentation", "llm", "project-descriptor"]
dependencies = [
    "click>=8.4.0",
    "pyyaml>=6.0.3",
    "toml>=0.10.2",
    "goal>=2.1.190",
    "costs>=0.1.51",
    "pfix>=0.1.73",
    "mcp>=1.27.1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = "Apache-2.0"

[project.optional-dependencies]
mcp = [
    "mcp>=1.27.1",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
    "build>=1.4.4",
    "twine>=6.2.0",
    "pyqual>=0.1.143",
    "goal>=2.1.190",
    "costs>=0.1.51",
    "pfix>=0.1.73",
    "mcp>=1.27.1",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[project.scripts]
sumd = "sumd.cli:main"
sumr = "sumd.cli:main_sumr"
sumd-mcp = "sumd.mcp_server:main"

[project.urls]
Homepage = "https://github.com/tom/statement"
Repository = "https://github.com/tom/statement"

[tool.hatch.build.targets.wheel]
packages = ["sumd"]

[tool.hatch.build.targets.sdist]
include = [
    "/sumd",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
