[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sumd-logic-validator"
version = "0.3.59"
description = "A Python-Prolog hybrid logic execution package."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "click>=8.0.0",
    "rich>=12.0.0",
    "sumd @ file:..",
]

[project.scripts]
sumd_logic_validator = "sumd_logic_validator.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyswip>=0.2.10",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
